--- a/Boletines1/index.html
+++ b/Boletines1/index.html
@@ -1,11 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Math World</title>
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+    <link rel="stylesheet" href="./assets/css/main.css">
+    <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="content">
+            <header>
+                <h1>Mundo de las Matemáticas</h1>
+            </header>
+        </div>
+        <table>
+            <thead>
+                <th>#</th>
+                <th>Nombre</th>
+                <th>Video</th>
+                <th>Calificación</th>
+                <th>Accion</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Álgebra de Mancill I. Ejercicio 82. Problema 20</td>
+                    <td><iframe width="200" height="100" src="https://www.youtube.com/embed/V09HoOYBI98" frameborder="0"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe></td>
+                    <td><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                            class="fas fa-star"></i></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Álgebra de Mancill I. Ejercicio 86. Problema 30.</td>
+                    <td><iframe width="200" height="100" src="https://www.youtube.com/embed/yiX21kc0QyA" frameborder="0"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe></td>
+                    <td><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                            class="fas fa-star"></i><i class="fas fa-star"></i></td>
+                    <td></td>
+                </tr>
+
+            </tbody>
+        </table>
+    </div>
+    </div>
 </body>
+
 </html>
