--- a/Mercadeo/index.html
+++ b/Mercadeo/index.html
@@ -26,6 +26,7 @@
           <th>Genero musical</th>
           <th>Debut</th>
           <th>Calificación</th>
+          <th>Acciones</th>
         </thead>
         <tbody>
           <tr>
@@ -34,6 +35,9 @@
             <td>Metal sinfónico</td>
             <td>1988</td>
             <td><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></td>
+            <td>
+                <a href="bandas/magodeoz.html"> Mago de Oz</a>
+            </td>
           </tr>
           <tr>
             <td>2</td>
@@ -41,6 +45,9 @@
             <td>Folk metal</td>
             <td>1996</td>
             <td><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></td>
+            <td>
+                <link rel="stylesheet" href="bandas/saurom.html">
+            </td>
           </tr>
           <tr>
             <td>3</td>
@@ -48,6 +55,9 @@
             <td>Heavy metal</td>
             <td>1996</td>
             <td><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></td>
+            <td>
+                <link rel="stylesheet" href="bandas/warcry.html">
+            </td>
           </tr>
           <tr>
             <td>4</td>
@@ -55,6 +65,9 @@
             <td> Rock</td>
             <td>1984</td>
             <td><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></td>
+            <td>
+                <link rel="stylesheet" href="bandas/heroesdelsilencio.html">
+            </td>
           </tr>
           <tr>
             <td>5</td>
@@ -62,6 +75,9 @@
             <td>Metal gótico</td>
             <td>2002</td>
             <td><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></td>
+            <td>
+                <link rel="stylesheet" href="bandas/stravaganzza.html">
+            </td>
           </tr>
         </tbody>
       </table>
