--- a/Mercadeo/index.html
+++ b/Mercadeo/index.html
@@ -26,57 +26,68 @@
           <th>Genero musical</th>
           <th>Debut</th>
           <th>Calificación</th>
-          <th>Acciones</th>
         </thead>
         <tbody>
           <tr>
             <td>1</td>
-            <td>Mago de Oz</td>
+            <td>
+              <a href="bandas/magodeoz.html"> Mago de Oz</a>
+            </td>
             <td>Metal sinfónico</td>
             <td>1988</td>
-            <td><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></td>
             <td>
-                <a href="bandas/magodeoz.html"> Mago de Oz</a>
+              <i class="fas fa-star"></i><i class="fas fa-star"></i
+              ><i class="fas fa-star"></i><i class="fas fa-star"></i
+              ><i class="fas fa-star"></i>
             </td>
           </tr>
           <tr>
             <td>2</td>
-            <td>Saurom</td>
+            <td>
+              <a href="bandas/saurom.html">Saurom</a>
+            </td>
             <td>Folk metal</td>
             <td>1996</td>
-            <td><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></td>
             <td>
-                <link rel="stylesheet" href="bandas/saurom.html">
+              <i class="fas fa-star"></i><i class="fas fa-star"></i
+              ><i class="fas fa-star"></i><i class="fas fa-star"></i>
             </td>
           </tr>
           <tr>
             <td>3</td>
-            <td>Warcry</td>
+            <td>
+              <a href="bandas/warcry.html">WarCry</a>
+            </td>
             <td>Heavy metal</td>
             <td>1996</td>
-            <td><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></td>
             <td>
-                <link rel="stylesheet" href="bandas/warcry.html">
+              <i class="fas fa-star"></i><i class="fas fa-star"></i
+              ><i class="fas fa-star"></i><i class="fas fa-star"></i
+              ><i class="fas fa-star"></i>
             </td>
           </tr>
           <tr>
             <td>4</td>
-            <td>Heroes del Silencio</td>
-            <td> Rock</td>
-            <td>1984</td>
-            <td><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></td>
             <td>
-                <link rel="stylesheet" href="bandas/heroesdelsilencio.html">
+              <a href="bandas/heroesdelsilencio.html">Heroes del Silencio</a>
+            </td>
+            <td>Rock</td>
+            <td>1984</td>
+            <td>
+              <i class="fas fa-star"></i><i class="fas fa-star"></i
+              ><i class="fas fa-star"></i>
             </td>
           </tr>
           <tr>
             <td>5</td>
-            <td>Stravaganzza</td>
+            <td>
+              <a href="bandas/stravaganzza.html">Stravaganzza</a>
+            </td>
             <td>Metal gótico</td>
             <td>2002</td>
-            <td><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></td>
             <td>
-                <link rel="stylesheet" href="bandas/stravaganzza.html">
+              <i class="fas fa-star"></i><i class="fas fa-star"></i
+              ><i class="fas fa-star"></i>
             </td>
           </tr>
         </tbody>
