--- a/Mercadeo/bandas/heroesdelsilencio.html
+++ b/Mercadeo/bandas/heroesdelsilencio.html
@@ -10,6 +10,7 @@
     />
     <link rel="stylesheet" href="../assets/css/main.css" />
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Open+Sans&display=swap" rel="stylesheet">
   </head>
 
   <body>
