--- a/Mercadeo/bandas/magodeoz.html
+++ b/Mercadeo/bandas/magodeoz.html
@@ -9,6 +9,7 @@
       href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
     />
     <link rel="stylesheet" href="../assets/css/main.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Open+Sans&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
   </head>
 
