--- a/Mercadeo/bandas/saurom.html
+++ b/Mercadeo/bandas/saurom.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" />
     <link rel="stylesheet" href="../assets/css/main.css" />
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
