--- a/Mercadeo/index.html
+++ b/Mercadeo/index.html
@@ -9,7 +9,7 @@
       href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
     />
     <link rel="stylesheet" href="./assets/css/main.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Arbutus+Slab&family=Caveat+Brush&family=Open+Sans&family=Sacramento&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
   </head>
 
