--- a/Mercadeo/bandas/saurom.html
+++ b/Mercadeo/bandas/saurom.html
@@ -24,12 +24,12 @@
                         <i class="fas fa-compact-disc""></i>
                     Folk metal, Celtic metal, Power metal, Heavy metal
                   </em>  
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet molestias unde fugiat hic perferendis. Quaerat accusamus expedita porro nihil at consectetur placeat deserunt quidem facilis esse, nobis temporibus ipsam ratione.</p>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque error explicabo quibusdam, laudantium quisquam deserunt nostrum facere. Assumenda deserunt dolores nihil dolor dolorem, quod veniam consectetur mollitia tenetur possimus corrupti.</p>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus mollitia rerum similique culpa, voluptas error dolorem saepe omnis deleniti cumque qui aliquid? Accusamus facere nostrum quod enim numquam culpa inventore?</p>
-                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam architecto cum odit facere repudiandae natus excepturi numquam id quas vel ullam, facilis consequatur rerum dolores velit laboriosam alias harum! Nihil?</p>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae consequuntur dignissimos cumque praesentium fugit? Tenetur commodi corporis non autem ratione et beatae tempore error, incidunt quod praesentium mollitia odio reprehenderit.</p>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo ut numquam, unde illum obcaecati dolorem iste ducimus corporis eveniet. Beatae minima quas numquam reiciendis repellendus delectus inventore blanditiis, amet commodi.</p>
+                  <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet molestias unde fugiat hic perferendis. Quaerat accusamus expedita porro nihil at consectetur placeat deserunt quidem facilis esse, nobis temporibus ipsam ratione.</p>
+                  <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque error explicabo quibusdam, laudantium quisquam deserunt nostrum facere. Assumenda deserunt dolores nihil dolor dolorem, quod veniam consectetur mollitia tenetur possimus corrupti.</p>
+                  <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus mollitia rerum similique culpa, voluptas error dolorem saepe omnis deleniti cumque qui aliquid? Accusamus facere nostrum quod enim numquam culpa inventore?</p>
+                  <p class="paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam architecto cum odit facere repudiandae natus excepturi numquam id quas vel ullam, facilis consequatur rerum dolores velit laboriosam alias harum! Nihil?</p>
+                  <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae consequuntur dignissimos cumque praesentium fugit? Tenetur commodi corporis non autem ratione et beatae tempore error, incidunt quod praesentium mollitia odio reprehenderit.</p>
+                  <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo ut numquam, unde illum obcaecati dolorem iste ducimus corporis eveniet. Beatae minima quas numquam reiciendis repellendus delectus inventore blanditiis, amet commodi.</p>
                   
             </div>
         </section>
