--- a/Mercadeo/index.html
+++ b/Mercadeo/index.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="content">
         <header>
-          <h1>Bandas de Rock Español</h1>
+          <h1 class="tittle">Bandas de Rock Español</h1>
         </header>
       
       <table>
