--- a/Mercadeo/index.html
+++ b/Mercadeo/index.html
@@ -20,7 +20,7 @@
           <h1 class="tittle">Bandas de Rock Español</h1>
         </header>
       
-      <table>
+      <table class="table">
         <thead>
           <th>#</th>
           <th>Grupo</th>
@@ -88,7 +88,7 @@
             <td>2002</td>
             <td>
               <i class="fas fa-star"></i><i class="fas fa-star"></i
-              ><i class="fas fa-star"></i>
+              ><i class="fas fa-star"></i><i class="fas fa-star-o"></i>
             </td>
           </tr>
         </tbody>
