--- a/Mercadeo/bandas/stravaganzza.html
+++ b/Mercadeo/bandas/stravaganzza.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="content">
         <header>
-          <h2>Stravaganzza</h2>
+          <h2 class="tittle-item">Stravaganzza</h2>
         </header>
         <section>
             <img src="" alt="">
