--- a/Mercadeo/bandas/heroesdelsilencio.html
+++ b/Mercadeo/bandas/heroesdelsilencio.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="content">
         <header>
-          <h2>Heroes del Silencio</h2>
+          <h2 class="tittle-item">Heroes del Silencio</h2>
         </header>
         <section>
           <img src="" alt="" />
