--- a/Mercadeo/bandas/saurom.html
+++ b/Mercadeo/bandas/saurom.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="content">
             <header>
-                <h2>Saurom</h2>
+                <h2 class="tittle-item">Saurom</h2>
             </header>
             <section>
                 <img src="" alt="">
