--- a/Mercadeo/bandas/magodeoz.html
+++ b/Mercadeo/bandas/magodeoz.html
@@ -11,13 +11,21 @@
     <link rel="stylesheet" href="../assets/css/main.css" />
     <link href="https://fonts.googleapis.com/css2?family=Arbutus+Slab&family=Caveat+Brush&family=Open+Sans&family=Sacramento&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
+    <link rel="stylesheet" href="../assets/css/animate.css">
   </head>
 
   <body>
     <div class="container">
-      <div class="content">
+      <div class="content animated fadeInDown">
+        <div class="actions">
+          <a href="../" class="close">
+            <span>X</span>
+          </a>
+        </div>
         <header>
-          <h2 class="tittle-item">Mago de Oz</h2>
+          <h2 class="tittle-item">
+            <span class="position">1</span>
+            Mago de Oz</h2>
         </header>
         <section>
             <img src="" alt="">
