--- a/Mercadeo/bandas/stravaganzza.html
+++ b/Mercadeo/bandas/stravaganzza.html
@@ -8,16 +8,25 @@
       rel="stylesheet"
       href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
     />
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/daneden/animate.css/master/animate.css">
     <link rel="stylesheet" href="../assets/css/main.css" />
+    <link rel="stylesheet" href="../assets/css/animate.css">
     <link href="https://fonts.googleapis.com/css2?family=Arbutus+Slab&family=Caveat+Brush&family=Open+Sans&family=Sacramento&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
   </head>
 
   <body>
     <div class="container">
-      <div class="content">
+      <div class="content animated fadeInDown">
+        <div class="actions">
+          <a href="../" class="close">
+            <span>X</span>
+          </a>
+        </div>
         <header>
-          <h2 class="tittle-item">Stravaganzza</h2>
+          <h2 class="tittle-item">
+            <span class="position">5</span>
+            Stravaganzza</h2>
         </header>
         <section>
             <img src="" alt="">
