--- a/Mercadeo/bandas/saurom.html
+++ b/Mercadeo/bandas/saurom.html
@@ -5,17 +5,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MoW</title>
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/daneden/animate.css/master/animate.css">
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" />
     <link rel="stylesheet" href="../assets/css/main.css" />
+    <link rel="stylesheet" href="../assets/css/animate.css">
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Arbutus+Slab&family=Caveat+Brush&family=Open+Sans&family=Sacramento&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Arbutus+Slab&family=Caveat+Brush&family=Open+Sans&family=Sacramento&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
     <div class="container">
-        <div class="content">
+        <div class="content animated fadeInDown">
+            <div class="actions">
+                <a href="../" class="close">
+                    <span>X</span>
+                </a>
+            </div>
             <header>
-                <h2 class="tittle-item">Saurom</h2>
+                <h2 class="tittle-item">
+                    <span class="position">2</span>
+                    Saurom</h2>
             </header>
             <section>
                 <img src="" alt="">
@@ -24,16 +36,23 @@
                         <i class="fas fa-compact-disc""></i>
                     Folk metal, Celtic metal, Power metal, Heavy metal
                   </em>  
-                  <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet molestias unde fugiat hic perferendis. Quaerat accusamus expedita porro nihil at consectetur placeat deserunt quidem facilis esse, nobis temporibus ipsam ratione.</p>
-                  <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque error explicabo quibusdam, laudantium quisquam deserunt nostrum facere. Assumenda deserunt dolores nihil dolor dolorem, quod veniam consectetur mollitia tenetur possimus corrupti.</p>
-                  <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus mollitia rerum similique culpa, voluptas error dolorem saepe omnis deleniti cumque qui aliquid? Accusamus facere nostrum quod enim numquam culpa inventore?</p>
-                  <p class="paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam architecto cum odit facere repudiandae natus excepturi numquam id quas vel ullam, facilis consequatur rerum dolores velit laboriosam alias harum! Nihil?</p>
-                  <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae consequuntur dignissimos cumque praesentium fugit? Tenetur commodi corporis non autem ratione et beatae tempore error, incidunt quod praesentium mollitia odio reprehenderit.</p>
-                  <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo ut numquam, unde illum obcaecati dolorem iste ducimus corporis eveniet. Beatae minima quas numquam reiciendis repellendus delectus inventore blanditiis, amet commodi.</p>
-                  
-            </div>
-        </section>
-      </div>
+                  <p class=" paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet molestias unde
+                            fugiat hic perferendis. Quaerat accusamus expedita porro nihil at consectetur placeat
+                            deserunt quidem facilis esse, nobis temporibus ipsam ratione.</p>
+                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque error
+                                explicabo quibusdam, laudantium quisquam deserunt nostrum facere. Assumenda deserunt
+                                dolores nihil dolor dolorem, quod veniam consectetur mollitia tenetur possimus corrupti.
+                            </p>
+                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
+                                mollitia rerum similique culpa, voluptas error dolorem saepe omnis deleniti cumque qui
+                                aliquid? Accusamus facere nostrum quod enim numquam culpa inventore?</p>
+                            <p class="paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+                                architecto cum odit facere repudiandae natus excepturi numquam id quas vel ullam,
+                                facilis consequatur rerum dolores velit laboriosam alias harum! Nihil?</p>
+                </div>
+            </section>
+        </div>
     </div>
-  </body>
+</body>
+
 </html>
