--- a/Mercadeo/index.html
+++ b/Mercadeo/index.html
@@ -11,11 +11,12 @@
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link href="https://fonts.googleapis.com/css2?family=Arbutus+Slab&family=Caveat+Brush&family=Open+Sans&family=Sacramento&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
+    <link rel="stylesheet" href="./assets/css/animate.css">
   </head>
 
   <body>
     <div class="container">
-      <div class="content">
+      <div class="content animated jello">
         <header>
           <h1 class="tittle">Bandas de Rock Español</h1>
         </header>
