--- a/Mercadeo/bandas/magodeoz.html
+++ b/Mercadeo/bandas/magodeoz.html
@@ -31,7 +31,7 @@
             <img src="" alt="">
             <div class="text">
                 <em>
-                    <i class="fas fa-compact-disc""></i>
+                    <i class="fas fa-compact-disc icon"></i>
                     Folk metal, Celtic metal, Metal sinfónico, Power metal
               </em>  
             </div>
