--- a/Mercadeo/index.html
+++ b/Mercadeo/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <div class="container">
-      <div class="content animated jello">
+      <div class="content">
         <header>
           <h1 class="tittle">Bandas de Rock Español</h1>
         </header>
