--- a/Mercadeo/bandas/magodeoz.html
+++ b/Mercadeo/bandas/magodeoz.html
@@ -30,8 +30,8 @@
         <section>
             <img src="" alt="">
             <div class="text">
-                <em>
-                    <i class="fas fa-compact-disc icon"></i>
+                <em class="icon">
+                    <i class="fas fa-compact-disc"></i>
                     Folk metal, Celtic metal, Metal sinfónico, Power metal
               </em>  
             </div>
