--- a/Mercadeo/bandas/heroesdelsilencio.html
+++ b/Mercadeo/bandas/heroesdelsilencio.html
@@ -30,7 +30,7 @@
         </header>
         <section>
           <img src="" alt="" />
-          <div class="text">
+          <div class="text icon">
               <em>
                 <i class="fas fa-compact-disc""></i>
                 Rock, Hard rock, Rock gótico, Post-punk
