--- a/Mercadeo/bandas/magodeoz.html
+++ b/Mercadeo/bandas/magodeoz.html
@@ -28,9 +28,9 @@
             Mago de Oz</h2>
         </header>
         <section>
-            <img src="" alt="">
-            <div class="text">
-                <em class="icon">
+            <img src="../assets/images/asd.jpg" class="main-image" alt="Mago de Oz">
+            <div class="text icon">
+                <em>
                     <i class="fas fa-compact-disc"></i>
                     Folk metal, Celtic metal, Metal sinfónico, Power metal
               </em>  
