--- a/Mercadeo/bandas/saurom.html
+++ b/Mercadeo/bandas/saurom.html
@@ -31,7 +31,7 @@
             </header>
             <section>
                 <img src="" alt="">
-                <div class="textx">
+                <div class="text icon">
                     <em>
                         <i class="fas fa-compact-disc""></i>
                     Folk metal, Celtic metal, Power metal, Heavy metal
