--- a/Mercadeo/bandas/heroesdelsilencio.html
+++ b/Mercadeo/bandas/heroesdelsilencio.html
@@ -29,7 +29,7 @@
             Heroes del Silencio</h2>
         </header>
         <section>
-          <img src="" alt="" />
+          <img src="../assets/images/hds.jpg" class="main-image" alt="Heroes del Silencio" />
           <div class="text icon">
               <em>
                 <i class="fas fa-compact-disc""></i>
