--- a/Mercadeo/bandas/magodeoz.html
+++ b/Mercadeo/bandas/magodeoz.html
@@ -1,42 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MoW</title>
-    <link
-      rel="stylesheet"
-      href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
-    />
-    <link rel="stylesheet" href="../assets/css/main.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Arbutus+Slab&family=Caveat+Brush&family=Open+Sans&family=Sacramento&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
-    <link rel="stylesheet" href="../assets/css/animate.css">
-  </head>
 
-  <body>
-    <div class="container">
-      <div class="content animated fadeInDown">
-        <div class="actions">
-          <a href="../" class="close">
-            <span>X</span>
-          </a>
-        </div>
-        <header>
-          <h2 class="tittle-item">
-            <span class="position">1</span>
-            Mago de Oz</h2>
-        </header>
-        <section>
-            <img src="../assets/images/asd.jpg" class="main-image" alt="Mago de Oz">
-            <div class="text icon">
-                <em>
-                    <i class="fas fa-compact-disc"></i>
-                    Folk metal, Celtic metal, Metal sinfónico, Power metal
-              </em>  
-            </div>
-        </section>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MoW</title>
+  <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" />
+  <link rel="stylesheet" href="../assets/css/main.css" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Arbutus+Slab&family=Caveat+Brush&family=Open+Sans&family=Sacramento&display=swap"
+    rel="stylesheet">
+  <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
+  <link rel="stylesheet" href="../assets/css/animate.css">
+</head>
+
+<body>
+  <div class="container">
+    <div class="content animated fadeInDown">
+      <div class="actions">
+        <a href="../" class="close">
+          <span>X</span>
+        </a>
       </div>
+      <header>
+        <h2 class="tittle-item">
+          <span class="position">1</span>
+          Mago de Oz</h2>
+      </header>
+      <section>
+        <img src="../assets/images/mago.jpg" class="main-image" alt="Mago de Oz">
+        <div class="text icon">
+          <em>
+            <i class="fas fa-compact-disc"></i>
+            Folk metal, Celtic metal, Metal sinfónico, Power metal
+          </em>
+        </div>
+      </section>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
