--- a/Mercadeo/bandas/saurom.html
+++ b/Mercadeo/bandas/saurom.html
@@ -30,7 +30,7 @@
                     Saurom</h2>
             </header>
             <section>
-                <img src="" alt="">
+                <img src="../assets/images/saurom.jpg" class="main-image" alt="Saurom">
                 <div class="text icon">
                     <em>
                         <i class="fas fa-compact-disc""></i>
@@ -43,12 +43,6 @@
                                 explicabo quibusdam, laudantium quisquam deserunt nostrum facere. Assumenda deserunt
                                 dolores nihil dolor dolorem, quod veniam consectetur mollitia tenetur possimus corrupti.
                             </p>
-                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
-                                mollitia rerum similique culpa, voluptas error dolorem saepe omnis deleniti cumque qui
-                                aliquid? Accusamus facere nostrum quod enim numquam culpa inventore?</p>
-                            <p class="paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam
-                                architecto cum odit facere repudiandae natus excepturi numquam id quas vel ullam,
-                                facilis consequatur rerum dolores velit laboriosam alias harum! Nihil?</p>
                 </div>
             </section>
         </div>
