--- a/Mercadeo/bandas/stravaganzza.html
+++ b/Mercadeo/bandas/stravaganzza.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MoW</title>
-    <link
-      rel="stylesheet"
-      href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
-    />
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/daneden/animate.css/master/animate.css">
-    <link rel="stylesheet" href="../assets/css/main.css" />
-    <link rel="stylesheet" href="../assets/css/animate.css">
-    <link href="https://fonts.googleapis.com/css2?family=Arbutus+Slab&family=Caveat+Brush&family=Open+Sans&family=Sacramento&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
-  </head>
 
-  <body>
-    <div class="container">
-      <div class="content animated fadeInDown">
-        <div class="actions">
-          <a href="../" class="close">
-            <span>X</span>
-          </a>
-        </div>
-        <header>
-          <h2 class="tittle-item">
-            <span class="position">5</span>
-            Stravaganzza</h2>
-        </header>
-        <section>
-            <img src="" alt="">
-            <div class="text icon">
-                <em>
-                    <i class="fas fa-compact-disc""></i>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MoW</title>
+  <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" />
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/daneden/animate.css/master/animate.css">
+  <link rel="stylesheet" href="../assets/css/main.css" />
+  <link rel="stylesheet" href="../assets/css/animate.css">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Arbutus+Slab&family=Caveat+Brush&family=Open+Sans&family=Sacramento&display=swap"
+    rel="stylesheet">
+  <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
+</head>
+
+<body>
+  <div class="container">
+    <div class="content animated fadeInDown">
+      <div class="actions">
+        <a href="../" class="close">
+          <span>X</span>
+        </a>
+      </div>
+      <header>
+        <h2 class="tittle-item">
+          <span class="position">5</span>
+          Stravaganzza</h2>
+      </header>
+      <section>
+        <img src="../assets/images/stravaganzza.jpg" class="main-image" alt="Stravaganzza">
+        <div class="text icon">
+          <em>
+            <i class="fas fa-compact-disc""></i>
                     Metal gótico, Metal sinfónico, Metal progresivo
               </em> 
             </div>
