--- a/Mercadeo/bandas/warcry.html
+++ b/Mercadeo/bandas/warcry.html
@@ -29,7 +29,7 @@
             WarCry</h2>
         </header>
         <section>
-            <img src="" alt="">
+            <img src="../assets/images/warcry.jpg" class="main-image" alt="WarCry">
             <div class="text icon">
                 <em>
                     <i class="fas fa-compact-disc""></i>
