--- a/Mercadeo/bandas/heroesdelsilencio.html
+++ b/Mercadeo/bandas/heroesdelsilencio.html
@@ -34,7 +34,9 @@
               <em>
                 <i class="fas fa-compact-disc""></i>
                 Rock, Hard rock, Rock gótico, Post-punk
-              </em>  
+              </em> 
+              <p class="paragraph">Héroes del Silencio (a veces abreviado Héroes o por sus iniciales HDS) fue un grupo español de rock radicado en Zaragoza, formado inicialmente por Juan Valdivia (guitarra solista) y Enrique Bunbury (voz y guitarra rítmica), y completado con Joaquín Cardiel (bajo) y Pedro Andreu (batería), a mediados de los años 80. Experimentaron un gran éxito en España e Hispanoamérica, así como en varios países europeos, incluyendo Alemania, Bélgica, Suiza, Francia e Italia, convirtiéndose en uno de los grupos más exitosos de la historia del rock en español.3​4​ Después de doce años en los que vendieron más de seis millones de discos en más de treinta y siete países, y en los que ofrecieron más de mil conciertos, la banda se separó en 1996.</p> 
+              <p class="paragraph">En 2007 fueron homenajeados por la discográfica EMI en reconocimiento a sus más de seis millones de discos vendidos, además de recibir el Premio Ondas Especial del Jurado.</p>
           </div>
         </section>
       </div>
