--- a/Mercadeo/bandas/magodeoz.html
+++ b/Mercadeo/bandas/magodeoz.html
@@ -34,6 +34,12 @@
             <i class="fas fa-compact-disc"></i>
             Folk metal, Celtic metal, Metal sinfónico, Power metal
           </em>
+          <p class="paragraph">
+            Mägo de Oz es una banda española de folk metal fundada el 7 de julio de 1988 por el baterista Txus di Fellatio en el barrio de Begoña en Madrid. Se caracterizan por su heterogénea y peculiar propuesta musical de mezclar metal y hard rock tradicionales con power metal, rock and roll, blues, música celta, música folk, música clásica, entre otros. Sin embargo, la música celta ha sido notoriamente predominante e identificable en el sonido de la banda hasta la actualidad.​
+          </p>
+          <p class="paragraph">
+            Destaca la escenografía de sus conciertos, que incorpora desde barcos piratas hasta catedrales medievales, pirotecnia y varias puestas en escena inéditas en el panorama español, así como la amplia temática lírica de sus composiciones, que varía en trasfondo, sea romántico, histórico, fantástico o de crítica política y social, muchas veces manejando historias conceptuales.
+          </p>
         </div>
       </section>
     </div>
