--- a/Mercadeo/bandas/saurom.html
+++ b/Mercadeo/bandas/saurom.html
@@ -36,9 +36,9 @@
                         <i class="fas fa-compact-disc""></i>
                     Folk metal, Celtic metal, Power metal, Heavy metal
                   </em>  
-                  <p class=" paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet molestias unde
-                    fugiat hic perferendis. Quaerat accusamus expedita porro nihil at consectetur placeat
-                    deserunt quidem facilis esse, nobis temporibus ipsam ratione.</p>
+                  <p class="paragraph">
+                    Saurom (anteriormente denominado Saurom Lamderth)1​es un grupo español de folk metal. Denominan su estilo como «juglar metal», un conglomerado de música rock, folk y celta, aderezado con letras basadas en la literatura, principalmente en leyendas, poemas, romances y cuentos tradicionales, con un trasfondo crítico, cultural y social. Algunas de sus letras tienen una temática relacionada con la novela El Señor de los Anillos, de J. R. R. Tolkien y con la literatura clásica y tradicional andaluza.
+                  </p>
                 </div>
             </section>
         </div>
