--- a/Mercadeo/bandas/stravaganzza.html
+++ b/Mercadeo/bandas/stravaganzza.html
@@ -35,6 +35,7 @@
             <i class="fas fa-compact-disc""></i>
                     Metal gótico, Metal sinfónico, Metal progresivo
               </em> 
+              <p class="paragraph">Stravaganzza es una formación musical española de metal gótico con origen madrileño. Surgió a mediados del año 2004 y en sus inicios estuvo compuesta por Pepe Herrero, Patricio Babasasa, Carlos Expósito, Fernando Martín, Rodrigo Calderón, Aroa Martín, Natalia Barrios (body painting), Noemí Pasca (bailarina) y el exvocalista de Saratoga, Leo Jiménez. Su estilo de música se podría clasificar como heavy metal de corte gótico, progresivo, y sinfónico, con influencias de metal extremo de los 90.</p>
             </div>
         </section>
       </div>
