--- a/Mercadeo/bandas/warcry.html
+++ b/Mercadeo/bandas/warcry.html
@@ -34,7 +34,9 @@
                 <em>
                     <i class="fas fa-compact-disc""></i>
                     Heavy metal, Power metal, Metal progresivo
-                  </em>  
+                  </em>
+                  <p class="paragraph">WarCry es una banda de power metal fundada en 2002 en Asturias (España), cuando el vocalista Víctor García y el baterista Alberto Ardines fueron expulsados de Avalanch. Pablo García y Fernando Mon aparecieron sólo como guitarristas invitados en el álbum debut homónimo, pero se hicieron miembros oficiales en 2002 junto con el bajista Álvaro Jardón y el pianista Manuel Ramil. Jardón abandonó la banda a finales de 2003, siendo reemplazado por Roberto García tres meses después. En el otoño de 2007 Ardines y Mon fueron reemplazados por Rafael Yugueros y José Rubio, respectivamente. Ramil fue expulsado a principios de 2008 y seguidamente en febrero de 2009 José Rubio dejó la banda por asuntos personales ajenos a WarCry, dejando como único guitarrista a Pablo García.</p>  
+                  <p class="paragraph">Desde el día 15 de febrero de 2020, la banda se encuentra en un parón indefinido, del cual no se ha descartado una posible disolución.</p>
             </div>
         </section>
       </div>
