--- a/Mercadeo/index.html
+++ b/Mercadeo/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MoW</title>
-    <link
-      rel="stylesheet"
-      href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
-    />
-    <link rel="stylesheet" href="./assets/css/main.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Arbutus+Slab&family=Caveat+Brush&family=Open+Sans&family=Sacramento&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
-    <link rel="stylesheet" href="./assets/css/animate.css">
-  </head>
 
-  <body>
-    <div class="container">
-      <div class="content">
-        <header>
-          <h1 class="tittle">Bandas de Rock Español</h1>
-        </header>
-      
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MoW</title>
+  <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" />
+  <link rel="stylesheet" href="./assets/css/main.css" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Arbutus+Slab&family=Caveat+Brush&family=Open+Sans&family=Sacramento&display=swap"
+    rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
+  <link rel="stylesheet" href="./assets/css/animate.css" />
+</head>
+
+<body>
+  <div class="container">
+    <div class="content">
+      <header>
+        <h1 class="tittle">Bandas de Rock Español</h1>
+      </header>
+
       <table class="table">
         <thead>
           <th>#</th>
@@ -38,9 +38,8 @@
             <td>Metal sinfónico</td>
             <td>1988</td>
             <td>
-              <i class="fas fa-star"></i><i class="fas fa-star"></i
-              ><i class="fas fa-star"></i><i class="fas fa-star"></i
-              ><i class="fas fa-star"></i>
+              <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                class="fas fa-star"></i><i class="fas fa-star"></i>
             </td>
           </tr>
           <tr>
@@ -51,8 +50,8 @@
             <td>Folk metal</td>
             <td>1996</td>
             <td>
-              <i class="fas fa-star"></i><i class="fas fa-star"></i
-              ><i class="fas fa-star"></i><i class="fas fa-star"></i>
+              <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                class="fas fa-star"></i>
             </td>
           </tr>
           <tr>
@@ -63,9 +62,8 @@
             <td>Heavy metal</td>
             <td>1996</td>
             <td>
-              <i class="fas fa-star"></i><i class="fas fa-star"></i
-              ><i class="fas fa-star"></i><i class="fas fa-star"></i
-              ><i class="fas fa-star"></i>
+              <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                class="fas fa-star"></i><i class="fas fa-star"></i>
             </td>
           </tr>
           <tr>
@@ -76,8 +74,7 @@
             <td>Rock</td>
             <td>1984</td>
             <td>
-              <i class="fas fa-star"></i><i class="fas fa-star"></i
-              ><i class="fas fa-star"></i>
+              <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
             </td>
           </tr>
           <tr>
@@ -88,13 +85,15 @@
             <td>Metal gótico</td>
             <td>2002</td>
             <td>
-              <i class="fas fa-star"></i><i class="fas fa-star"></i
-              ><i class="fas fa-star"></i><i class="fas fa-star-o"></i>
+              <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                class="fas fa-star-o"></i>
             </td>
           </tr>
         </tbody>
       </table>
-      </div>
     </div>
-  </body>
+  </div>
+  <script src="./js/main.js"></script>
+</body>
+
 </html>
