--- a/Mercadeo/index.html
+++ b/Mercadeo/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <div class="container">
-      <div class="content">
+      <div class="content animated fadeInDown">
         <header>
           <h1 class="tittle">Bandas de Rock Español</h1>
         </header>
@@ -33,7 +33,7 @@
           <tr>
             <td>1</td>
             <td>
-              <a href="bandas/magodeoz.html"> Mago de Oz</a>
+              <a href="./bandas/magodeoz.html"> Mago de Oz</a>
             </td>
             <td>Metal sinfónico</td>
             <td>1988</td>
@@ -46,7 +46,7 @@
           <tr>
             <td>2</td>
             <td>
-              <a href="bandas/saurom.html">Saurom</a>
+              <a href="./bandas/saurom.html">Saurom</a>
             </td>
             <td>Folk metal</td>
             <td>1996</td>
@@ -58,7 +58,7 @@
           <tr>
             <td>3</td>
             <td>
-              <a href="bandas/warcry.html">WarCry</a>
+              <a href="./bandas/warcry.html">WarCry</a>
             </td>
             <td>Heavy metal</td>
             <td>1996</td>
@@ -71,7 +71,7 @@
           <tr>
             <td>4</td>
             <td>
-              <a href="bandas/heroesdelsilencio.html">Heroes del Silencio</a>
+              <a href="./bandas/heroesdelsilencio.html">Heroes del Silencio</a>
             </td>
             <td>Rock</td>
             <td>1984</td>
@@ -83,7 +83,7 @@
           <tr>
             <td>5</td>
             <td>
-              <a href="bandas/stravaganzza.html">Stravaganzza</a>
+              <a href="./bandas/stravaganzza.html">Stravaganzza</a>
             </td>
             <td>Metal gótico</td>
             <td>2002</td>
@@ -96,5 +96,6 @@
       </table>
       </div>
     </div>
+    <script src="./js/main.js"></script>
   </body>
 </html>
